Add note about nbsphinx

--- a/docs/examples/raw-cells.ipynb
+++ b/docs/examples/raw-cells.ipynb
@@ -27,7 +27,9 @@
    "id": "226f2393-7238-466d-a917-68c83851242a",
    "metadata": {},
    "source": [
-    "You can mix Jupyter notebooks and rst/md files with MyST-nb."
+    "You can mix Jupyter notebooks and rst/md files with MyST-nb, but it [currently doesn't support the display of raw cells](https://github.com/executablebooks/MyST-NB/issues/117). To work around this problem you can use MyST Parser and `nbsphinx` instead to build your notebooks. See [sphinx-tags' pyproject.toml](https://github.com/melissawm/sphinx-tags/blob/main/pyproject.toml) for more information.\n",
+    "\n",
+    "You may need to install [pandoc](https://pandoc.org/) as a system dependency if you are using `nbsphinx`, as the PyPI package called `pandoc` does not contain the full functionality of pandoc - see the [nbsphinx documentation](https://nbsphinx.readthedocs.io/en/0.9.1/installation.html#pandoc) for details."
    ]
   },
   {
@@ -38,14 +40,6 @@
    "source": [
     "**Note**: Make sure you select the correct cell type (reST) in the toolbar when you edit the notebook (see [the nbsphinx documentation](https://nbsphinx.readthedocs.io/en/0.9.2/raw-cells.html#reST) for more details)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "880beb3b-1698-4ad8-bb69-2c14af6a0aff",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
