started of a domain

--- a/test/sources/test-ipynb/page_1.ipynb
+++ b/test/sources/test-ipynb/page_1.ipynb
@@ -15,7 +15,7 @@
     "tags": []
    },
    "source": [
-    ".. tags:: tag_1, tag2, tag 3, [{(tag   4)}]"
+    ".. tag:tags:: tag_1, tag2, tag 3, [{(tag   4)}]"
    ]
   }
  ],
