--- a/test/sources/test-ipynb/page_2.ipynb
+++ b/test/sources/test-ipynb/page_2.ipynb
@@ -15,7 +15,7 @@
     "tags": []
    },
    "source": [
-    ".. tags:: tag_1, tag_5, {{🧪test tag; please ignore🧪}}"
+    ".. tag:tags:: tag_1, tag_5, {{🧪test tag; please ignore🧪}}"
    ]
   }
  ],
