--- a/test/sources/test-ipynb/page_5.ipynb
+++ b/test/sources/test-ipynb/page_5.ipynb
@@ -11,10 +11,10 @@
    "cell_type": "raw",
    "metadata": {
     "raw_mimetype": "text/restructuredtext",
-    "tags":[]
+    "tags": []
    },
    "source": [
-    ".. tags:: \n",
+    ".. tag:tags:: \n",
     "\n",
     "   tag_1, tag_5, \n",
     "   tag2, \n",
